#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-03
2011-03-28 Andy Salnikov
- implemented support for base types in DdlPds2Psana

Tag: V00-00-02
2011-03-21 Andy Salnikov
- fixing code generation for array member access

Tag: V00-00-01
2011-03-20 Andy Salnikov
- first production tag
- lots of changes, almost complete

Tag: andy-20101209-01
2010-12-09 Andrei Salnikov
- adding bitfield support

Tag: andy-20101208-02
2010-12-08 Andrei Salnikov
- added "use" directive to import types from other files

Tag: andy-20101208-01
2010-12-08 Andrei Salnikov
- further development, introduced namespaces/lookup

Tag: andy-20101027-01
2010-10-27 Andrei Salnikov
- First version with very limited functionality, development tag.