@@ -11,6 +11,15 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-04
+2011-03-30 Andy Salnikov
+- adding support for the unknown-size types in pds2psana backend:
+  - adding size argument for the constructor declaration of such types
+  - definition of the constructor cannot be generated at this time
+    and has to be added manually
+  - there is exactly one type now which needs this, so manual definition
+    is probably OK
+
 Tag: V00-00-03
 2011-03-28 Andy Salnikov
 - implemented support for base types in DdlPds2Psana
